# amber-ide

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
app/: .eslintrc.cjs  .gitignore  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
app/scripts/: dist.sh
app/src/client/: connection.test.ts  connection.ts  index.ts  router.test.ts  router.ts
app/src/main/: amberBin.test.ts  amberBin.ts  claudeNames.ts  clientSupervisor.test.ts  clientSupervisor.ts  daemonBoot.test.ts  daemonBoot.ts  desktopInstall.test.ts  desktopInstall.ts  editorFiles.test.ts  editorFiles.ts  index.ts  installBinary.test.ts  installBinary.ts  renderCompat.test.ts  renderCompat.ts  serviceManager.test.ts  serviceManager.ts
app/src/preload/: index.ts
app/src/renderer/: Browser.tsx  Editor.tsx  JsonTree.tsx  MdPreview.tsx  Pane.tsx  SplitView.tsx  dumps.test.ts  dumps.ts  editor.css  index.html  keys.test.ts  keys.ts  layout.test.ts  layout.ts  main.tsx  osc.test.ts  osc.ts  replay.ts  sessionRows.test.ts  sessionRows.ts  store.test.ts  store.ts  tabView.test.ts  tabView.ts  theme.css  webview.d.ts
app/src/shared/: browserName.test.ts  browserName.ts  claudeSummary.test.ts  claudeSummary.ts  editorName.test.ts  editorName.ts  ids.test.ts  ids.ts  jsonTools.test.ts  jsonTools.ts  layoutFile.test.ts  layoutFile.ts  mdTools.test.ts  mdTools.ts  names.test.ts  names.ts  pathSel.test.ts  pathSel.ts  proto.test.ts  proto.ts  socketPath.test.ts  socketPath.ts  workspaceFile.test.ts  workspaceFile.ts
app/test/: fakeDaemon.ts  realDaemon.test.ts
crates/amber/: Cargo.toml
crates/amber-core/: Cargo.toml
crates/amber-core/src/: lib.rs  proto.rs  ring.rs  state.rs
crates/amber/assets/: app.js  index.html  style.css
crates/amber/src/: attach.rs  claude.rs  daemon.rs  lib.rs  main.rs  manager.rs  platform.rs  procinfo.rs  pty.rs  supervisor.rs  transport.rs  watchers.rs  web.rs  winlifecycle.rs
crates/amber/tests/: activity.rs  backlog_hol.rs  claude_supervise.rs  ctl.rs  dump_backlog.rs  kill_group.rs  restart.rs  run_state.rs  slots.rs  snapshot_stall.rs  socket.rs  watch.rs  web.rs  wedged_client.rs
docs/superpowers/plans/: 2026-07-13-amber-ide-app-slice-4.md  2026-07-13-amber-ide-app-slice-5.md  2026-07-13-amber-ide-app-slice-6.md  2026-07-13-amber-ide-app-slices-1-3.md  2026-07-14-macos-intel-support.md  2026-07-17-ui-ux-improvements-plan.md  2026-07-17-workspace-save-load-plan.md  2026-07-18-browser-pane.md
docs/superpowers/specs/: 2026-07-12-amber-session-daemon-design.md  2026-07-13-amber-ide-app-design.md  2026-07-14-amber-collab-saas-auth-design.md  2026-07-14-attach-detach-hotkey-design.md  2026-07-14-attach-status-nesting-design.md  2026-07-14-drag-panels-claude-shell-design.md  2026-07-14-macos-intel-support-design.md  2026-07-17-desktop-install-button-design.md  2026-07-17-memory-monitor-throttle-design.md  2026-07-17-workspace-save-load-design.md  2026-07-18-browser-pane-design.md  2026-07-18-cross-tab-move-design.md  2026-07-18-windows-port-design.md  2026-07-19-amber-web-mobile-design.md  2026-07-19-editor-pane-design.md  2026-07-19-stable-session-slots-design.md
infra/: README.md  boot-hold.sh  install.sh  tmux.conf  torture-setup.sh
infra/daemon/: README.md  amber-web.service  amber.service  com.amber-ide.daemon.plist.in  com.amber-ide.web.plist.in  install.sh  macos-intel-verification.md
infra/launchd/: com.amber-ide.tmux.plist
infra/systemd/: amber-tmux.service
scripts/: dist.sh  vendor-web-assets.sh
