[workspace]
resolver = "2"
members = ["crates/amber-core", "crates/amber"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chriskim2273/amber-ide"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Distributable release binary: optimized + stripped. NOT panic=abort — the
# daemon isolates a panicking connection thread; aborting would kill every
# session over one bad connection.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
