[package]
name = "amber"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
amber-core = { path = "../amber-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
libc = { workspace = true }
nix = { version = "0.31.3", features = ["term", "poll", "signal"] }
portable-pty = "0.9"
signal-hook = "0.4.4"
terminal_size = "0.4.4"
tungstenite = { version = "0.30.0", default-features = false, features = ["handshake"] }

[dev-dependencies]
tempfile = "3"
tungstenite = { version = "0.30.0", default-features = false, features = ["handshake"] }
libc = { workspace = true }

[lib]
name = "amber"
path = "src/lib.rs"
